fixed modal focus and sizing on mobile

--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -5,6 +5,8 @@
   top: 50%;
   transition: all 400ms ease-in;
   transform: translate(-50%, -75%);
+  width: fit-content;
+  max-width: 100%;
 }
 
 .hideModal {
